Replace availability endpoint as POST
